fix(TableColumn): spacing

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -43,6 +43,9 @@
     padding: 0 4px;
 }
 
+.tableColumn span {
+    margin-left: 8px
+}
 .childHeadRow{
     border-bottom: 2px solid #535bf2;
     box-sizing: border-box;
